Fix loading screen not covering everything. Fix potential directory listing bug. Add media transcoding for browser unsupported audio types.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,5 +1,6 @@
 body {
     padding-top: 65px;
+    width: 100%;
     height: 100%;
 }
 
@@ -33,6 +34,28 @@ body {
 
 #dirlist {
 
+}
+
+.MediaInfoBox {
+    width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    background-color: #222;
+    border-color: #080808;
+    border-width: 0 0 1px;
+    z-index: 1030;
+    border: 1px solid transparent;
+
+    background-image: -webkit-linear-gradient(top,#3c3c3c 0,#222 100%);
+    background-image: -o-linear-gradient(top,#3c3c3c 0,#222 100%);
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#3c3c3c),to(#222));
+    background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3c3c3c', endColorstr='#ff222222', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+    background-repeat: repeat-x;
+
+    color: #9d9d9d;
 }
 
 .marquee {
